<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".ui.details.DetailsActivity">


    <TextView
        android:id="@+id/recipe_details_tv_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:textAlignment="center"
        android:textColor="#282828"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/recipe_details_header_card"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape_recycler_bottom_shadow"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recipe_details_tv_title">

        <androidx.cardview.widget.CardView
            android:id="@+id/recipe_details_item_iv_card"
            android:layout_width="113dp"
            android:layout_height="110dp"
            app:cardCornerRadius="10dp"
            app:cardUseCompatPadding="true"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/recipe_details_item_iv_recipe"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"

                    android:scaleType="centerCrop" />


            </FrameLayout>

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/recipe_details_item_tv_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="20dp"
            android:lines="1"
            android:maxLines="2"
            android:textAlignment="viewStart"
            android:textColor="#35373f"
            android:textSize="19sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/recipe_details_item_iv_card"

            app:layout_constraintTop_toTopOf="@id/recipe_details_item_iv_card" />

        <TextView
            android:id="@+id/recipe_details_item_tv_headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="60dp"
            android:maxLines="2"

            android:textAlignment="viewStart"
            android:textColor="#828282"
            android:textSize="15sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/recipe_details_item_tv_name"
            app:layout_constraintTop_toBottomOf="@id/recipe_details_item_tv_name" />

        <TextView
            android:id="@+id/recipe_details_tv_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@id/recipe_details_item_iv_card"
            app:layout_constraintTop_toBottomOf="@id/recipe_details_item_tv_headline"

            />

        <TextView
            android:id="@+id/recipe_details_tv_fat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:text="@string/fats"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/recipe_details_item_iv_card"
            app:layout_constraintTop_toBottomOf="@id/recipe_details_item_iv_card"

            />

        <TextView
            android:id="@+id/recipe_details_tv_calories"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="6dp"
            android:layout_marginBottom="20dp"
            android:background="#00000000"
            android:text="@string/calories"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@id/recipe_details_tv_fat"
            app:layout_constraintTop_toBottomOf="@id/recipe_details_tv_fat" />

        <TextView
            android:id="@+id/recipe_details_tv_carbos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="80dp"
            android:background="#00000000"

            android:text="@string/carbos"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/recipe_details_tv_fat"
            app:layout_constraintStart_toEndOf="@id/recipe_details_tv_fat_amount"
            app:layout_constraintTop_toTopOf="@id/recipe_details_tv_fat" />

        <TextView
            android:id="@+id/recipe_details_tv_proteins"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="#00000000"
            android:text="@string/proteins"

            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@id/recipe_details_tv_calories"
            app:layout_constraintStart_toStartOf="@id/recipe_details_tv_carbos"
            app:layout_constraintTop_toTopOf="@id/recipe_details_tv_calories" />


        <TextView
            android:id="@+id/recipe_details_tv_fat_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="00"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/recipe_details_tv_fat"
            app:layout_constraintStart_toEndOf="@id/recipe_details_tv_fat"
            app:layout_constraintTop_toTopOf="@id/recipe_details_tv_fat"

            />

        <TextView
            android:id="@+id/recipe_details_tv_calories_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="00"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/recipe_details_tv_calories"
            app:layout_constraintStart_toEndOf="@id/recipe_details_tv_calories"
            app:layout_constraintTop_toTopOf="@id/recipe_details_tv_calories"

            />

        <TextView
            android:id="@+id/recipe_details_tv_carobs_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="00"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/recipe_details_tv_carbos"
            app:layout_constraintStart_toEndOf="@id/recipe_details_tv_carbos"
            app:layout_constraintTop_toTopOf="@id/recipe_details_tv_carbos"

            />

        <TextView
            android:id="@+id/recipe_details_tv_proteins_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:text="00"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@id/recipe_details_tv_proteins"
            app:layout_constraintStart_toEndOf="@id/recipe_details_tv_proteins"
            app:layout_constraintTop_toTopOf="@id/recipe_details_tv_proteins"

            />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <View
        android:id="@+id/recipe_details_view_separator"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_margin="20dp"
        android:background="@color/colorPrimaryDark"
        app:layout_constraintTop_toBottomOf="@id/recipe_details_header_card" />


    <ScrollView
        android:id="@+id/recipe_details_layout_details"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/recipe_details_view_separator">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:layout_margin="16dp">


            <TextView
                android:id="@+id/recipe_details_tv_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/recipe_details_tv_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:lineSpacingExtra="3sp"
                android:padding="8dp"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@id/recipe_details_tv_desc"
                app:layout_constraintTop_toBottomOf="@id/recipe_details_tv_desc" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>